tests/errors/type_check/statement/call_non_function_target.sim

        fn f() {
            x: i64;
            entry:
            x = 42;
            call copy x();
            return
        }
        